RingSolver